# zipper

./: .gitignore  README.md  example.txt  pyproject.toml  requirements.txt
zipper/: alert.py  button.py  compresser.py  main.py  main_screen.py  settings.py  utils.py
zipper/application/: main.py  settings.py
zipper/application/components/: alert.py  button.py
zipper/application/screens/: main_screen.py
zipper/application/utils/: colors.py  file.py  ui.py
zipper/configs/: file_configs.py
zipper/core/: compresser.py  decompresser.py
